--- a/api/.env.example
+++ b/api/.env.example
@@ -6,20 +6,9 @@ JWT_SECRET=1e64cd28be1c47919aed-9ab99b8f64c9
 
 NODE_ENV=development
 
-DATABASE_URL="postgresql://postgres:postgres@172.30.0.3:5432/galhardoapp_api?schema=public"
-
-MAILTRAP_USERNAME=
-MAILTRAP_PASSWORD=
+DATABASE_URL="postgresql://postgres:postgres@172.30.0.3:5432/galhardo_finances?schema=public"
 
 TELEGRAM_BOT_HTTP_TOKEN=
 TELEGRAM_BOT_CHANNEL_ID=
 
 LOCALE_DATE_TIME=pt-BR
-
-APP_EMAIL=aleexgvieira@gmail.com
-
-RABBIT_MQ_URL=amqp://rabbitmq:rabbitmq@localhost:5672
-
-STRIPE_SK_TEST=sk_test_
-
-STRIPE_PK_TEST=pk_test_
