--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"fix:prettier": "npx prettier --write src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.17",
 		"@types/uuid": "^9.0.0",
+		"prettier": "^2.8.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
