--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
 	"compilerOptions": {
-		"target": "ESNext",
+		"target": "ES2022",
 		"useDefineForClassFields": true,
-		"module": "ESNext",
+		"module": "ES2022",
 		"lib": [
 			"ESNext",
-			"DOM"
+			"DOM",
+			"ES2022"
 		],
 		"moduleResolution": "Node",
 		"strict": true,
@@ -16,7 +17,8 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noImplicitReturns": false,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"removeComments": true
 	},
 	"include": [
 		"src"
