--- a/version2/package.json
+++ b/version2/package.json
@@ -5,10 +5,6 @@
 	"main": "dist/server.js",
 	"author": "Alex Galhardo <aleexgvieira@gmail.com>",
 	"license": "MIT",
-	"engines": {
-		"node": "v16.14.0",
-		"npm": "8.19.2"
-	},
 	"prisma": {
 		"seed": "ts-node --transpile-only --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
@@ -16,10 +12,10 @@
 		"start": "npm run build && node dist/server.js",
 		"nodemon": "npx nodemon dist/server.js",
 		"pm2": "npx pm2 start dist/server.js --name galhardo-app-api --interpreter node --watch",
-		"dev": "concurrently \"npm run watch-compile\" \"node ./dist/server.js\"",
-		"watch-compile": "swc src -w --out-dir dist",
+		"dev": "concurrently \"npm run build\" \"node ./dist/server.js\"",
+		"watch-compile": "npm run delete:build && swc src -w --out-dir dist && cp ./src/repositories/json/AccountsRepository.json ./dist/repositories/json/AccountsRepository.json",
 		"watch-dev": "node ./dist/server.js",
-		"build": "swc src -d dist",
+		"build": "npm run delete:build && swc src -d dist && cp src/repositories/json/AccountsRepository.json dist/repositories/json/AccountsRepository.json",
 		"vitest": "vitest",
 		"vitest:coverage": "vitest run --coverage",
 		"fix:prettier": "npx prettier --write src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts tests/**/*.ts",
@@ -36,6 +32,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
+		"fs-extra": "^11.1.0",
 		"graphql": "^16.6.0",
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
@@ -43,34 +40,33 @@
 		"prisma": "^4.8.0"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.57",
-		"@swc/core": "^1.2.205",
+		"@swc/cli": "^0.1.59",
+		"@swc/core": "^1.3.24",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/compression": "^1.7.2",
-		"@types/express": "^4.17.13",
+		"@types/express": "^4.17.15",
 		"@types/fs-extra": "^9.0.13",
-		"@types/jsonwebtoken": "^8.5.8",
-		"@types/node": "^18.11.17",
+		"@types/jsonwebtoken": "^9.0.0",
+		"@types/node": "^18.11.18",
 		"@types/supertest": "^2.0.12",
-		"c8": "^7.11.3",
-		"concurrently": "^7.2.2",
-		"eslint": "^8.13.0",
+		"@typescript-eslint/eslint-plugin": "^5.47.1",
+		"@typescript-eslint/parser": "^5.47.1",
+		"c8": "^7.12.0",
+		"concurrently": "^7.6.0",
+		"eslint": "^8.30.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-import-resolver-typescript": "^2.7.1",
+		"eslint-import-resolver-typescript": "^3.5.2",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-import-helpers": "^1.2.1",
-		"eslint-plugin-prettier": "^4.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.19.0",
-		"@typescript-eslint/parser": "^5.19.0",
+		"eslint-plugin-import-helpers": "^1.3.1",
+		"eslint-plugin-prettier": "^4.2.1",
 		"install": "^0.13.0",
 		"npm": "^9.2.0",
-		"prettier": "^2.6.2",
-		"supertest": "^6.2.3",
-		"ts-jest": "^28.0.2",
+		"prettier": "^2.8.1",
+		"supertest": "^6.3.3",
 		"ts-node": "^10.9.1",
-		"ts-node-dev": "^1.1.8",
+		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.9.4",
-		"vitest": "^0.15.1"
+		"vitest": "^0.26.2"
 	}
 }
