refactor: details and readme june 2024

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,8 @@
 		120
 	],
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
-	},
+    "source.fixAll.eslint": "explicit"
+  },
 	"files.associations": {
 		".sequelizerc": "javascript",
 		".stylelintrc": "json",
