--- a/package.json
+++ b/package.json
@@ -1,35 +1,22 @@
 {
 	"name": "finances.alexgalhardo.com",
-	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"format": "npx prettier --write src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts && npm run format:markdown",
-		"format:markdown": "remark . --output"
-	},
-	"devDependencies": {
-		"@types/node": "^20.6.0",
-		"@types/uuid": "^9.0.3",
-		"prettier": "^3.0.3",
-		"typescript": "^5.2.2",
-		"vite": "^4.4.9",
-		"remark-cli": "^11.0.0",
-		"remark-preset-lint-consistent": "^5.1.2",
-		"remark-preset-lint-recommended": "^6.1.3",
-		"remark-toc": "^8.0.1"
+		"format": "npx prettier --write src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts",
+		"prepare": "npx husky install"
 	},
 	"dependencies": {
-		"uuid": "^9.0.0"
+		"uuid": "^10.0.0"
 	},
-	"remarkConfig": {
-		"settings": {
-			"bullet": "*"
-		},
-		"plugins": [
-			"remark-preset-lint-consistent",
-			"remark-preset-lint-recommended"
-		]
+	"devDependencies": {
+		"@types/node": "^20.14.5",
+		"@types/uuid": "^9.0.8",
+		"typescript": "^5.4.5",
+		"vite": "^5.3.1",
+		"husky": "^8.0.3",
+		"prettier": "^3.3.2"
 	}
 }
